--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "dev": "rollup --config --watch",
     "lint": "eslint ./src",
     "build": "rollup --config",
-    "prepare": "npm run build",
-    "predeploy": "npm run build"
+    "docs:stage": "surge --domain $npm_package_name.surge.sh docs",
+    "preversion": "npm run build",
+    "version": "git add -f docs/dist",
+    "prepack": "rm -rf dist && cp -r docs/dist dist",
+    "postpack": "rm -rf dist"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
