--- a/package.json
+++ b/package.json
@@ -1,51 +1,28 @@
 {
-  "name": "gl-canvas",
-  "version": "0.2.3",
-  "description": "Custom Element for <canvas> and WebGL",
-  "license": "MIT",
-  "author": "Shun Git",
-  "keywords": [
-    "gl",
-    "webgl",
-    "canvas",
-    "webcomponents",
-    "web-components"
-  ],
-  "homepage": "https://musakui.github.io/gl-canvas/",
-  "repository": "github:musakui/gl-canvas",
-  "main": "src/index.js",
-  "module": "dist/gl-canvas.esm.js",
-  "browser": "dist/gl-canvas.min.js",
-  "files": [
-    "src",
-    "dist"
-  ],
-  "scripts": {
-    "dev": "rollup --config --watch",
-    "lint": "eslint ./src",
-    "build": "rollup --config",
-    "docs:stage": "surge --domain $npm_package_name.surge.sh docs",
-    "predistdocs": "git update-index --no-skip-worktree $npm_package_config_distdocs",
-    "distdocs": "git add -f $npm_package_config_distdocs",
-    "postdistdocs": "git update-index --skip-worktree $npm_package_config_distdocs",
-    "preversion": "npm run build",
-    "version": "npm run distdocs",
-    "prepack": "rm -rf dist && cp -r docs/dist dist",
-    "postpack": "rm -rf dist"
-  },
-  "config": {
-    "distdocs": "docs/dist/*"
-  },
-  "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "rollup": "^2.0.5",
-    "rollup-plugin-eslint": "^7.0.0",
-    "rollup-plugin-terser": "^5.3.0"
-  },
-  "dependencies": {}
+	"name": "gl-canvas",
+	"description": "Custom Element for <canvas> and WebGL",
+	"keywords": [
+		"gl",
+		"webgl",
+		"canvas",
+		"webcomponents",
+		"web-components"
+	],
+	"author": "musakui",
+	"license": "MIT",
+	"repository": "github:musakui/gl-canvas",
+	"version": "0.3.0",
+	"type": "module",
+	"files": [
+		"lib"
+	],
+	"exports": {
+		"./gl-canvas": "./lib/gl-canvas.js",
+		"./gl-shadertoy": "./lib/gl-shadertoy.js",
+		".": "./lib/index.js"
+	},
+	"scripts": {
+	},
+	"devDependencies": {
+	}
 }
